--- a/css/sections/post.scss
+++ b/css/sections/post.scss
@@ -1,6 +1,6 @@
 .job_post{
   height: 850px;
-  background: url("/img/bg__bottom.jpg");
+  background: url("img/bg__bottom.jpg");
   padding-bottom: 0;
 }
 
