--- a/css/sections/mobile.scss
+++ b/css/sections/mobile.scss
@@ -1,6 +1,6 @@
 .mobile {
   min-height: 840px;
-  background: url("img/bg__middle.jpg");
+  background: url("../img/bg__middle.jpg");
 }
 
 .mobile__container{
